# Glints

./: README.md  database.env  docker-compose.yml  pyproject.toml
dags/: pipeline.py
env/: airflow.env
sql/: data.sql  init_scripts.sql  table.sql
