[tool.poetry]
name = "glints"
version = "0.1.0"
description = "glints technical assessment"
authors = ["jeremy <jeremytee97@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
apache-airflow = "^2.3.2"
psycopg2 = "^2.9.3"

[tool.poetry.dev-dependencies]
ipykernel = "^6.15.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
